Rename compose -> path to role folder.
Logic is broken. It's ok for now. Next step implement role contract and
validation
