# docs/openapi.yaml
@@ -399,13 +399,9 @@ components:
         name:
           type: string
           example: my-webapp
-        compose_content:
+        role_path:
           type: string
-          example: |
-            version: '3'
-            services:
-              web:
-                image: nginx
+          example: /home/user/roles/my-webapp
         created_at:
           type: string
           format: date-time
@@ -416,18 +412,14 @@ components:
       type: object
       required:
         - name
-        - compose_content
+        - role_path
       properties:
         name:
           type: string
           example: my-webapp
-        compose_content:
+        role_path:
           type: string
-          example: |
-            version: '3'
-            services:
-              web:
-                image: nginx
+          example: /home/user/roles/my-webapp
     Deployment:
       type: object
       properties:
